--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_CANDY_MACHINE_ID=9LsVh5fiXBQ3ESjjb88h75P7L8tvCLGtRXTtmkefhg9f
 REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
+REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
 SKIP_PREFLIGHT_CHECK=true
